# AirClassroomDownload

./: .gitignore  CMakeLists.txt  README.md  Run.fish  main.cpp
.github/workflows/: codeql.yml
